--- a/src/components/Notification/notification.css
+++ b/src/components/Notification/notification.css
@@ -17,7 +17,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 300px;
+  min-width: 300px;
   height: fit-content;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
   transition: opacity 0.5s ease;
