--- a/src/index.css
+++ b/src/index.css
@@ -32,3 +32,24 @@ html::-webkit-scrollbar-thumb:active {
   background: rgb(68, 68, 68);
   border-radius: 10px;
 }
+
+.ground::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: 
+      /* Horizontal lines */ linear-gradient(
+      to bottom,
+      rgba(0, 0, 0, 0.1) 1px,
+      transparent 1px
+    ),
+    /* Vertical lines */
+      linear-gradient(to right, rgba(0, 0, 0, 0.1) 1px, transparent 1px);
+  background-size: 20px 20px; /* Grid size */
+  background-color: white; /* Background color for the grid */
+  z-index: 0; /* Ensure the background is behind the content */
+  pointer-events: none; /* Prevent interactions with the background */
+}
