--- a/src/index.css
+++ b/src/index.css
@@ -9,28 +9,23 @@ body {
   height: 100%;
 }
 
-html::-webkit-scrollbar {
+::-webkit-scrollbar {
   width: 5px;
 }
 
-html::-webkit-scrollbar-track {
-  background: rgb(179, 177, 177);
-  border-radius: 10px;
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
 }
 
-html::-webkit-scrollbar-thumb {
-  background: rgb(136, 136, 136);
-  border-radius: 10px;
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
 }
 
-html::-webkit-scrollbar-thumb:hover {
-  background: rgb(100, 100, 100);
-  border-radius: 10px;
-}
-
-html::-webkit-scrollbar-thumb:active {
-  background: rgb(68, 68, 68);
-  border-radius: 10px;
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
 
 .ground::before {
